<resources>
    <string name="app_name">99直播</string>
    <string name="home_page">首页</string>
    <string name="user">我的</string>
    <string name="text_hot">热门</string>
    <string name="text_focus">关注</string>
    <string name="footer_hint_load_normal">加载更多</string>
    <string name="footer_hint_load_ready">释放加载</string>
    <string name="header_hint_refresh_normal">下拉刷新</string>
    <string name="header_hint_refresh_ready">释放刷新</string>
    <string name="header_hint_refresh_loading">正在刷新</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="load_error">点击屏幕，重新加载</string>
    <string name="myLive">我的直播</string>
    <string name="set">设置</string>
    <string name="id">99号</string>
    <string name="tel">+86</string>
    <string name="head">头像</string>
    <string name="pet">昵称</string>
    <string name="birth">出生日期</string>
    <string name="constellation">星座</string>
    <string name="address">所在地</string>
    <string name="motto">签名</string>
    <string name="finish">完成</string>
    <string name="input_pet_name_empty">昵称不能为空</string>
    <string name="motto_hint">注：请不要在签名中泄露过多个人隐私信息</string>
    <string name="sex">性别</string>
    <string name="single_data">个人资料</string>
    <string name="topic">精彩无极限 #如何在45岁到来之前保养好自己#</string>
    <string name="live_unknown">未知</string>
    <string name="password">验证码</string>
    <string name="login">登录</string>
    <string name="input_tel">请输入手机号码</string>
    <string name="input_password">请输入手机验证码</string>
    <string name="getvercode">获取验证码</string>
    <string name="phone">手机号</string>
    <string name="attention_hint">您还没有关注任何主播呦</string>
    <string name="search_anchor">去寻找感兴趣的主播</string>
    <string name="tel_me">联系我们</string>
    <string name="feed_back">意见反馈</string>
    <string name="clear">清理缓存</string>
    <string name="about">关于99</string>
    <string name="check">检查更新</string>
    <string name="user_agreement">用户协议</string>
    <string name="logout">退出登录</string>
    <string name="cancel">取消</string>
    <string name="enter">确定</string>
    <string name="exits">确认要退出登录吗？</string>
    <string name="about_live">关于99直播</string>
    <string name="about_detail1">“99广场舞”，是个针对中年老用户的广场舞视频平台，以优质的广场舞视频内容为产品核心，包含“PGC名师视频+UGC草根视频”两大块。 </string>
    <string name="about_detail2">用户可以通过“99广场舞”的官网及APP浏览喜欢的舞蹈视频、或者拍摄上传自己的作品；团队也在线下尝试建立联盟和社群，平台会提供一些免费的广场舞培训、拍摄等服务，将这些原本分散的舞队串联起来。</string>
    <string name="telPhone">联系电话：</string>
    <string name="section">人力资源部：</string>
    <string name="section2">市场部：</string>
    <string name="feed_back_hint">请输入意见和建议</string>
    <string name="feedback_length">/400</string>
    <string name="phone_login">手机登录</string>
    <string name="myfans">我的粉丝</string>
    <string name="my_attention">我的关注</string>
    <string name="other_attention">他人关注</string>
    <string name="user_name">为你而来</string>
    <string name="address_test">河北石家庄</string>
    <string name="cover_hint">点击修改封面</string>
    <string name="input_live_topic">今天你想播点啥？</string>
    <string name="add_topic">#添加话题</string>
    <string name="share_hint">选中分享能提高直播排名哦</string>
    <string name="begin_live">开始直播</string>
    <string name="observe">开播默认同意遵守《99直播管理条例》</string>
    <string name="getvercode_new">重新发送</string>
    <string name="update_app">正在下载安装包</string>
    <string name="down_error">下载失败</string>
    <string name="identity">99号：</string>
    <string name="person_letter">私信</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_take_photo">拍照</string>
    <string name="btn_pic_photo">从手机相册选择</string>
    <string name="tip_no_permission">权限不足</string>
    <string name="publish_wait_uploading">请等待封面上传</string>
    <string name="publish_upload_success">上传封面成功</string>
    <string name="publish_upload_cover_failed">上传封面失败</string>
    <string name="beauty">美颜效果</string>
    <string name="white">美白效果</string>
    <string name="flash_hint">前置摄像头无法打开闪光灯</string>
    <string name="beauty_hint">当前机型性能无法支持美颜功能</string>
    <string name="nophonenumber">请输入手机号</string>
    <string name="putrightphnum">请输入正确的手机号</string>
    <string name="no_verifysms">请输入验证码</string>
    <string name="share">分享至</string>
    <string name="wechat">微信好友</string>
    <string name="live_send_hint">说点什么吧</string>
    <string name="send">发送</string>
    <string name="input_text_empty">输入不能为空</string>
    <string name="input_too_much">输入的太长了</string>
    <string name="location_now">正在定位中</string>
    <string name="location_error">定位失败</string>
    <string name="other_home">99主页</string>
    <string name="feed_back_finish">点击反馈</string>
    <string name="feed_back_empty">反馈不能为空</string>
    <string name="text_live_lbs_fail">未检测到</string>
    <string name="text_live_location">正在定位中</string>
    <string name="live_end_tips">直播结束啦!</string>
    <string name="live_time_tips">直播时长</string>
    <string name="live_members_tips">观看人数</string>
    <string name="live_admires_tips">获赞数量</string>
    <string name="btn_return_home">返回首页</string>
    <string name="no_fanc">你还没有粉丝</string>
    <string name="del_success">删除成功</string>
    <string name="del_error">删除失败</string>
    <string name="if_del">确定要删除吗？</string>
    <string name="no_attention">你还没有关注任何主播哦</string>
    <string name="code_error">验证码错误</string>
    <string name="no_my_live">还没有直播哦</string>
    <string name="add_photo">请添加直播封面</string>
    <string name="account">我的账户</string>
    <string name="account_balance">账户余额</string>
    <string name="wexinpay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="recharge_agr">我已阅读并同意《用户充值协议》</string>
    <string name="my_account">我的账户</string>
    <string name="pay_sure">确认充值？</string>
    <string name="order_sure">订单确认</string>
    <string name="no_gold_send_gift">钻石余额不足,去充值？</string>
    <string name="input_no_empty">输入不能为空</string>
    <string name="nickName">昵称</string>
    <string name="unattention">关注</string>
    <string name="attentioned">已关注</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_money">支付金额</string>
    <string name="pay_order">购买商品</string>
    <string name="tv_pay_sure">确认支付</string>
    <string name="other_fans">他人粉丝</string>
    <string name="result_title">支付结果</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="diamond">(钻石)</string>
    <string name="net_error">服务器繁忙，请重试或反馈给我们</string>
    <string name="float_window_not_allow">悬浮窗权限未开启 请在应用-权限中打开悬浮窗权限</string>
    <string name="finish_live_hint">稳定的直播时间与时长，会养成用户的观看习惯，从而成为你的忠实粉丝</string>
    <string name="reap_coin">收获99币</string>
    <string name="transpond_hint">转发自己的直播，吸引更多粉丝，可以让更多的人关注你的直播，有更多收获！</string>
    <string name="share_my">分享我的直播成果</string>
    <string name="coin">99币：</string>
    <string name="fans_contribute">粉丝贡献</string>
    <string name="approve">实名认证</string>
    <string name="live_finish">直播已结束</string>
    <string name="my_earning">我的收益</string>
    <string name="appcoin">99币</string>
    <string name="red_packet">可兑现的收益(元)</string>
    <string name="getRed">提现</string>
    <string name="earning_hint">注：\n1.每次最低50元起提，每一周只能提现一次\n2.每个工作日15点之前提交申请的，资金当天到账\n3.15点之后提交申请提现的第二个工作日到账</string>
    <string name="add_tag">添加直播标签</string>
    <string name="tv_live_tag">直播标签</string>
    <string name="h5_share">分享</string>
    <string name="fans">粉丝</string>
    <string name="search_hint">请输入主播99号或昵称</string>
    <string name="sign_normal">主播有点懒，没有签名~</string>
    <string name="binding_hint">绑定的支付宝将成为你的提现账户</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="alipay_hint">请输入支付宝账号</string>
    <string name="real_name">真实姓名</string>
    <string name="real_name_hint">请输入真实姓名</string>
    <string name="now_binding">立即绑定</string>
    <string name="binging_account">提现账户绑定</string>
    <string name="no_account">请输入绑定支付宝账号</string>
    <string name="no_name">请输入真实姓名</string>
    <string name="change">更换</string>
    <string name="withdraw_account">提现账户：</string>
    <string name="earning_hint2">99币是99直播里主播收入，可以折换成人民币，如果你获得的99币越多，你可兑换的人民币也就越多！</string>
    <string name="withdraw_success">申请提现成功</string>
    <string name="withdraw_data">1-3个工作日到账</string>
    <string name="account_digits">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@.</string>
    <string name="my_grades">我的等级</string>
    <string name="grades_privilege">等级特权</string>
    <string name="ranking">5级开启</string>
    <string name="approch">21级开启</string>
    <string name="tv_interest">你对什么感兴趣？</string>
    <string name="tv_follow_anchor">猜你感兴趣的主播</string>
    <string name="jump">跳过</string>
    <string name="once_follow">保存</string>
    <string name="order_now">立即预约</string>
    <string name="time_more">99+</string>
    <string name="newfri_wait">等待验证</string>
    <string name="newfri_accept">已接受</string>
    <string name="newfri_agree">同意</string>
    <string name="summary_friend_add">请求添加好友</string>
    <string name="summary_me">我</string>
    <string name="summary_friend_add_me">请求添加</string>
    <string name="summary_friend_added">我已添加</string>
    <string name="summary_friend_recommend">推荐添加</string>
    <string name="conversation_system_friend">新朋友</string>
    <string name="conversation_draft">[草稿]</string>
    <string name="chat_press_talk">按住 说话</string>
    <string name="chat_image">图片</string>
    <string name="chat_photo">拍摄</string>
    <string name="chat_video">小视频</string>
    <string name="chat_file">文件</string>
    <string name="chat_release_send">松开 结束</string>
    <string name="chat_up_finger">手指上滑 取消发送</string>
    <string name="summary_image">[图片]</string>
    <string name="save_exist">文件已存在</string>
    <string name="save_succ">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="file_not_found">文件未找到，请稍后重试！</string>
    <string name="download_fail">下载失败</string>
    <string name="downloading">正在下载，请稍后</string>
    <string name="summary_voice">[语音]</string>
    <string name="summary_video">[小视频]</string>
    <string name="summary_group_admin_change">管理员变更</string>
    <string name="summary_group_mem_add">加入群</string>
    <string name="summary_group_mem_kick">被踢出群</string>
    <string name="summary_group_mem_modify">资料变更</string>
    <string name="summary_group_mem_quit">退出群</string>
    <string name="summary_group_info_change">群资料变更</string>
    <string name="summary_file">[文件]</string>
    <string name="chat_content_bad">内容含有敏感词</string>
    <string name="chat_audio_too_short">录音过短，请重试</string>
    <string name="chat_del">删除</string>
    <string name="chat_resend">重新发送</string>
    <string name="chat_save">保存</string>
    <string name="chat_file_too_large">文件过大，发送失败</string>
    <string name="chat_file_not_exist">文件不存在，发送失败</string>
    <string name="chat_image_preview_title">图片预览</string>
    <string name="chat_image_preview_send">发送</string>
    <string name="chat_image_preview_ori">原图发送</string>
    <string name="chat_image_preview_load_err">图片加载失败</string>
    <string name="chat_typing">对方正在输入...</string>
    <string name="conversation_del">删除会话</string>
    <string name="private_letter">私信</string>
    <string name="profile_back">返回</string>
    <string name="profile_detail">详细资料</string>
    <string name="profile_del">删除好友</string>
    <string name="profile_chat">发送消息</string>
    <string name="edit_error">修改失败</string>
    <string name="profile_remark_edit">修改备注</string>
    <string name="profile_black_succ">加入黑名单成功</string>
    <string name="default_group_name">默认分组</string>
    <string name="profile_del_succeed">删除好友成功</string>
    <string name="profile_del_fail">删除好友失败</string>
    <string name="change_group_error">修改分组失败</string>
    <string name="title_addfri">添加好友</string>
    <string name="add_detail_name">备注名</string>
    <string name="add_detail_message">附加消息</string>
    <string name="add_friend_send">发送添加好友请求</string>
    <string name="add_friend_succeed">请求已发送</string>
    <string name="add_friend_added">已添加好友</string>
</resources>