<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ll_layout_binding"
    android:background="@color/page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/layout_title" layout="@layout/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150">
        
        <ImageView
            android:id="@+id/iv_alipay_logo"
            android:background="@drawable/alipay_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_28"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_60" />

        <TextView
            android:layout_below="@id/iv_alipay_logo"
            android:layout_marginTop="@dimen/dp_19"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/binding_hint"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_999"/>
    </RelativeLayout>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50.5">

        <TextView
            android:id="@+id/tv_alipay_account"
            android:text="@string/alipay_account"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_222"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_103"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_alipay_account"
            android:background="@null"
            android:layout_toRightOf="@id/tv_alipay_account"
            android:layout_centerVertical="true"
            android:hint="@string/alipay_hint"
            android:textColorHint="@color/text_999"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_999"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--android:digits="@string/account_digits"-->
        <!--android:inputType="textEmailAddress"-->

    </RelativeLayout>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:id="@+id/tv_real_name"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/real_name"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_222"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_103"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_real_name"
            android:background="@null"
            android:layout_toRightOf="@id/tv_real_name"
            android:layout_centerVertical="true"
            android:hint="@string/real_name_hint"
            android:textColorHint="@color/text_999"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_999"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"/>


    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50.5">

        <TextView
            android:id="@+id/tv_tel_phone"
            android:text="@string/phone"
            android:paddingLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_222"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_103"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_35"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_bt_normal"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/getvercode"
            android:textColor="@color/text_5a5b"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:id="@+id/tv_check_phone"
            android:background="@null"
            android:maxLength="11"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_toRightOf="@id/tv_tel_phone"
            android:layout_toLeftOf="@id/tv_get_code"
            android:layout_centerVertical="true"
            android:hint="@string/input_tel"
            android:textColorHint="@color/text_999"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50">

        <TextView
            android:id="@+id/tv_version_code"
            android:paddingLeft="@dimen/dp_10"
            android:text="@string/password"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_222"
            android:layout_centerVertical="true"
            android:layout_width="@dimen/dp_103"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_check_code"
            android:background="@null"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="4"
            android:layout_toRightOf="@id/tv_version_code"
            android:layout_centerVertical="true"
            android:hint="@string/no_verifysms"
            android:textColorHint="@color/text_999"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/text_999"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_binding_alipay_hint"
        android:textSize="@dimen/sp_12"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_40"
        android:layout_marginRight="@dimen/dp_40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_now_binding"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/shape_binding"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_height="@dimen/dp_48"
        android:text="@string/now_binding"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:gravity="center"/>


</LinearLayout>