<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/text_f9f4f5"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/layout_title" layout="@layout/title"/>

    <TextView
        android:id="@+id/tv_withdraw_number"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_65"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_50"
        android:text="@string/withdraw_success"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_222"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/withdraw_data"
        android:textSize="@dimen/sp_12"
        android:textColor="@color/text_999"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_withdraw_back_home"
        android:background="@drawable/shape_earning"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_79"
        android:gravity="center"
        android:text="@string/btn_return_home"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48" />

</LinearLayout>