<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/layout_title" layout="@layout/title"/>

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_200"
        android:background="@mipmap/bg_login"
        android:visibility="gone"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_login"
        android:background="@color/page">

        <RelativeLayout
            android:layout_marginTop="@dimen/dp_33"
            android:layout_centerHorizontal="true"
            android:id="@+id/relativeLayout_phone"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_height="@dimen/dp_50">

            <TextView
                android:id="@+id/phone"
                android:layout_width="@dimen/dp_65"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/tel"
                android:textColor="@color/text_222"
                android:textSize="@dimen/sp_16" />

            <EditText
                android:id="@+id/edit_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/phone"
                android:background="@null"
                android:gravity="center_vertical|left"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/input_tel"
                android:paddingLeft="@dimen/dp_25"
                android:singleLine="true"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/text_999"/>

        </RelativeLayout>

        <View
            android:layout_below="@id/relativeLayout_phone"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/line_gray" />

        <RelativeLayout
            android:id="@+id/relativeLayout_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_below="@id/relativeLayout_phone">

            <TextView
                android:id="@+id/verifyCode"
                android:layout_width="@dimen/dp_65"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:text="@string/password"
                android:textColor="@color/text_222"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_get_code"
                android:layout_width="@dimen/dp_85"
                android:layout_height="@dimen/dp_35"
                android:layout_centerVertical="true"
                android:background="@drawable/shape_bt_normal"
                android:onClick="onClick"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/getvercode"
                android:textColor="@color/text_5a5b"
                android:textSize="@dimen/dp_12" />

            <EditText
                android:id="@+id/edit_pwd"
                android:layout_width="@dimen/dp_190"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/verifyCode"
                android:background="@null"
                android:inputType="number"
                android:hint="@string/input_password"
                android:paddingLeft="@dimen/dp_25"
                android:singleLine="true"
                android:textSize="@dimen/sp_16"
                android:maxLength="4"
                android:textColor="@color/text_999"/>

            <View
                android:layout_below="@id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray" />

        </RelativeLayout>

        <View
            android:layout_below="@id/relativeLayout_password"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@color/line_gray" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="320dp"
            android:layout_height="@dimen/dp_48"
            android:layout_below="@+id/relativeLayout_password"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/text_5a5b"
            android:background="@drawable/shape_bt_normal" />

    </RelativeLayout>

</LinearLayout>