<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_layout_recommend"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:background="@drawable/shape_interest_background"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_420">

        <RelativeLayout
            android:id="@+id/rl_recommend_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60">

            <TextView
                android:text="@string/tv_follow_anchor"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                android:textColor="@color/text_5a5b"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_jump"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jump"
                android:textColor="@color/text_999"
                android:textSize="@dimen/sp_16"/>

            <View
                android:layout_alignParentBottom="true"
                android:background="@color/page"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_recommend_follow"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:background="@drawable/shape_earning"
            android:gravity="center"
            android:text="@string/once_follow"
            android:textStyle="bold"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/white"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_recommend"
            android:layout_below="@id/rl_recommend_title"
            android:layout_above="@id/tv_recommend_follow"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </RelativeLayout>

</RelativeLayout>